# E8icRenderer

./: .gitignore  CMakeLists.txt  README.md
app/src/: crazy_lighting  main.cpp
app/src/shaders/: Bloom.frag  Blur.frag  CubeShadowMap.fragmentshader  CubeShadowMap.geom  CubeShadowMap.vertexshader  Light.fragmentshader  Light.vertexshader  LightNormal.fragmentshader  LightNormal.vertexshader  Monocolor.frag  Monocolor.vert  ShadowedMono.frag  ShadowedMono.vert  ShadowedNormal.fragmentshader  ShadowedNormal.vert  ShadowedNormal.vertexshader  TexturedFragmentShader.fragmentshader  TexturedVertexShader.vertexshader
common/: CMakeLists.txt
common/include/: model.hpp  shader.hpp  textures.hpp
common/src/: model.cpp  shader.cpp  textures.cpp
src/: main.cpp
src/shaders/: SimpleVertexShader.vertexshader
